--- a/lib/go_hoard_yourself.html
+++ b/lib/go_hoard_yourself.html
@@ -1,2 +1,7 @@
-<h1>Go Hoard Yourself</h1>
-<dragon-info [dragon]="dragon"></dragon-info>
+
+<div class="container-fluid">
+    <div class="panel panel-default"><div class="panel-body">
+        <h1 class="col-xs-6">Go Hoard Yourself</h1>
+        <dragon-info [dragon]="dragon" class="col-xs-6 text-right"></dragon-info>
+    </div></div>
+</div>
