Use angular pipes

--- a/lib/go_hoard_yourself.html
+++ b/lib/go_hoard_yourself.html
@@ -9,11 +9,11 @@
     </nav>
 
     <div class="row col">
-        <div class="card col">
+        <div class="card col w-25">
             <div class="card-header">Tasks</div>
             <tasks [dragon]="dragon" class="card-body"></tasks>
         </div>
-        <div class="col">
+        <div class="col w-50">
             <div class="card h-50">
                 <div class="card-header">Status</div>
                 <dragon-info [dragon]="dragon" class="card-body"></dragon-info>
@@ -22,7 +22,7 @@
                 <canvas class="w-100 h-100"></canvas>
             </div>
         </div>
-        <div class="card col">
+        <div class="card col w-25">
             <div class="card-header">Food</div>
             <food [dragon]="dragon" class="card-body"></food>
         </div>
