--- a/lib/go_hoard_yourself.html
+++ b/lib/go_hoard_yourself.html
@@ -9,22 +9,52 @@
     </nav>
 
     <div class="row col">
-        <div class="card col w-25">
-            <div class="card-header">Tasks</div>
-            <tasks [dragon]="dragon" class="card-body"></tasks>
+        <div class="col w-25 p-0">
+            <div class="card h-100">
+                <div class="card-header">Tasks</div>
+                <tasks [dragon]="dragon" class="card-body"></tasks>
+            </div>
         </div>
-        <div class="col w-50">
+        
+        <div class="col w-50 p-0">
             <div class="card h-50">
-                <div class="card-header">Status</div>
-                <dragon-info [dragon]="dragon" class="card-body"></dragon-info>
+                <div class="card-header">
+                    <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                        <li class="nav-item"><a
+                            class="nav-link active"
+                            id="status-tab"
+                            data-toggle="tab"
+                            href="#status"
+                            role="tab"
+                        >Status</a></li>
+                        <li class="nav-item"><a
+                            class="nav-link"
+                            id="log-tab"
+                            data-toggle="tab"
+                            href="#log"
+                            role="tab"
+                        >Log</a></li>
+                    </ul>
+                </div>
+                <div class="tab-content card-body">
+                    <div class="tab-pane fade show active" id="status" role="tabpanel">
+                        <dragon-info [dragon]="dragon"></dragon-info>
+                    </div>
+                    <div class="tab-pane fade" id="log" role="tabpanel">
+                        <log [dragon]="dragon"></log>
+                    </div>
+                </div>
             </div>
             <div class="h-50">
                 <canvas class="w-100 h-100"></canvas>
             </div>
         </div>
-        <div class="card col w-25">
-            <div class="card-header">Food</div>
-            <food [dragon]="dragon" class="card-body"></food>
+
+        <div class="col w-25 p-0">
+            <div class="card h-100">
+                <div class="card-header">Food</div>
+                <food [dragon]="dragon" class="card-body"></food>
+            </div>
         </div>
     </div>
 </div>
