--- a/lib/go_hoard_yourself.html
+++ b/lib/go_hoard_yourself.html
@@ -58,3 +58,7 @@
         </div>
     </div>
 </div>
+
+<div style="position: absolute; bottom: 0; right: 0;">
+    <log-toasts [dragon]="dragon"></log-toasts>
+</div>
