--- a/lib/go_hoard_yourself.html
+++ b/lib/go_hoard_yourself.html
@@ -18,8 +18,32 @@
     <div class="row col">
         <div class="col w-25 p-0">
             <div class="card h-100">
-                <div class="card-header">Tasks</div>
-                <tasks [dragon]="dragon" class="card-body"></tasks>
+                <div class="card-header">
+                    <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                        <li class="nav-item"><a
+                            class="nav-link active"
+                            id="tasks-tab"
+                            data-toggle="tab"
+                            href="#tasks"
+                            role="tab"
+                        >Tasks</a></li>
+                        <li class="nav-item"><a
+                            class="nav-link"
+                            id="build-tab"
+                            data-toggle="tab"
+                            href="#build"
+                            role="tab"
+                        >Build</a></li>
+                    </ul>
+                </div>
+                <div class="tab-content card-body">
+                    <div class="tab-pane fade show active" id="tasks" role="tabpanel">
+                        <tasks [dragon]="dragon"></tasks>
+                    </div>
+                    <div class="tab-pane fade" id="build" role="tabpanel">
+                        TODO
+                    </div>
+                </div>
             </div>
         </div>
         
@@ -59,8 +83,22 @@
 
         <div class="col w-25 p-0">
             <div class="card h-100">
-                <div class="card-header">Food</div>
-                <food [dragon]="dragon" class="card-body"></food>
+                <div class="card-header">
+                    <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                        <li class="nav-item"><a
+                            class="nav-link active"
+                            id="food-tab"
+                            data-toggle="tab"
+                            href="#food"
+                            role="tab"
+                        >Food</a></li>
+                    </ul>
+                </div>
+                <div class="tab-content card-body">
+                    <div class="tab-pane fade show active" id="food" role="tabpanel">
+                        <food [dragon]="dragon"></food>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
