--- a/lib/go_hoard_yourself.html
+++ b/lib/go_hoard_yourself.html
@@ -12,7 +12,7 @@
             <i class="fa fa-flask"></i> {{dragon.sciencePoints}}
         </div>
         <div class="collapse navbar-collapse" id="resourcesBanner"></div>
-        <button type="button" class="btn fa fa-cog p-0" style="font-size: x-large;"></button>
+        <settings [dragon]="dragon"></settings>
     </nav>
 
     <div class="row col">
