--- a/lib/go_hoard_yourself.html
+++ b/lib/go_hoard_yourself.html
@@ -85,7 +85,7 @@
             <div class="card h-100">
                 <div class="card-header">
                     <ul class="nav nav-tabs card-header-tabs" role="tablist">
-                        <li class="nav-item"><a
+                        <li class="nav-item" *ngIf="dragon.foodUnlocked"><a
                             class="nav-link active"
                             id="food-tab"
                             data-toggle="tab"
