Changed "build" to "market"

--- a/lib/go_hoard_yourself.html
+++ b/lib/go_hoard_yourself.html
@@ -27,13 +27,13 @@
                             href="#tasks"
                             role="tab"
                         >Tasks</a></li>
-                        <li class="nav-item" *ngIf="dragon.goldUnlocked"><a
+                        <li class="nav-item" *ngIf="dragon.marketUnlocked"><a
                             class="nav-link"
                             id="build-tab"
                             data-toggle="tab"
                             href="#build"
                             role="tab"
-                        >Build</a></li>
+                        >Market</a></li>
                     </ul>
                 </div>
                 <div class="tab-content card-body">
